some content progress in interactive mode; core.py: add continue_mode

--- a/data/chunk_full_source.tex
+++ b/data/chunk_full_source.tex
@@ -188,7 +188,7 @@ is a finite collection of elements that allows for repetition.  The
 multiset consisting of two copies of $x$ is written as
 \label{multisetsym}%
 $\{x,x\}_{\rmms}$.
-\snippet{22}
+\snippet{22i}
 For example, the roots of the polynomial $p(x) = (x-1)^2$ are the elements of the multiset $\{1,1\}_{\mspace{-1mu}_\rmms},$
 while the prime factors of 72 are the elements of the multiset $\{2,2,2,3,3\}_\rmms.$
 
