add more content

--- a/data/chunk_full_source.tex
+++ b/data/chunk_full_source.tex
@@ -242,7 +242,7 @@ $(x_i)^{\infty}_{i=1}.$
 }\end{defin}
 
 
-\snippet{30}
+\snippet{30i}
 Let $\SX$ be a set, and let $X\isdef(x_i)_{i=1}^\infty$ be a sequence whose components are elements of $\SX;$ that is, $\{x_1,x_2,\ldots\}\subseteq\SX.$
 %
 For convenience, we write either $X\subseteq \SX$ or $X\subset \SX,$  where $X$ is viewed as a set and the multiplicity of the components of the sequence is ignored.
@@ -250,7 +250,7 @@ For convenience, we write either $X\subseteq \SX$ or $X\subset \SX,$  where $X$ 
 \snippet{31}
 For sequences $X,Y\subset\BBF^n,$ define $X + Y\isdef (x_i + y_i)_{i=1}^\infty$ and $X\odot Y\isdef (x_i\odot y_i)_{i=1}^\infty,$ where ``$\odot$'' denotes component-wise multiplication.  In the case $n=1,$ we define $XY\isdef (x_i y_i)_{i=1}^\infty.$
 
-\snippet{32}
+\snippet{32i}
 
 
 
