more content and updated prompt (terminology statement type)
# Last 3 commits:

# 2d95a8b extend prompt template, fix inconsistencies in formalized_statements0.md 
# 12c2a05 core.py: prevent ignored snippet to trigger an LLM-call 
# 3c285f8 chunk_full_source.tex: add snippet delimiters to Logic-Section

--- a/data/chunk_full_source.tex
+++ b/data/chunk_full_source.tex
@@ -273,7 +273,7 @@ For sequences $X,Y\subset\BBF^n,$ define $X + Y\isdef (x_i + y_i)_{i=1}^\infty$ 
 
 \snippet{34}
 Every {\it statement} is either true or false, and no statement is both true and false.
-\snippet{35}
+\snippet{35i}
 \index{statement!definition}%
 %
 %
